feat(admin): add admin auth, CSV upload, auto-refresh; jobs store; /admin + /login routes

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/JOB_VAULTlogo.png" />
     <title>JobHub - Find Your Dream Job Today | Daily Job Updates</title>
     <meta name="description" content="Discover thousands of job opportunities updated daily from top companies across India. Search full-time, internship, and contract positions with advanced filters." />
     <meta name="author" content="JobHub" />
     <meta name="keywords" content="jobs, job search, careers, employment, job listings, job portal, India jobs" />
-
+<!-- 
     <meta property="og:title" content="JobHub - Find Your Dream Job Today" />
     <meta property="og:description" content="Discover thousands of job opportunities updated daily from top companies across India" />
     <meta property="og:type" content="website" />
@@ -15,7 +16,7 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
   <body>
